fixing z-index styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,10 @@
     --soft-skyblue:#85c3db;
 }
 
+body{
+    background-color: var(--primary_blue);
+}
+
 .hamburger{
     display: block;
     width: 35px;
@@ -57,8 +61,8 @@
     align-items: center;
     background-color: var(--primary_blue);
     padding: 2rem;
-    z-index: 98;
-    box-shadow: 0px 4px 8px rgb(29, 26, 94);
+    z-index: 1;
+    box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.25);
 }
 
 .hamburguer_icon{
@@ -81,8 +85,8 @@
 }
 
 .logo_container:hover{
-   width: 150px;
-   height: 150px;
+   width: 100px;
+   height: 100px;
 }
 
 .sedes{
@@ -91,7 +95,7 @@
     justify-content: center;
     align-items: center;
     padding: 5rem 0 1rem 0;
-    background-color: #2E378E;
+    background: var(--primary_blue);
 }
 
 
@@ -102,7 +106,7 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    background-color: var(--primary_blue);
+    background-color: #3845BB;
     color: white;
     border-radius: 10px;
     margin: 10px 0 10px 0;
@@ -147,7 +151,7 @@
 }
 
 .sede_container_homeschool:hover{
-    background-color: var(--soft-skyblue);
+    background: var(--primary_blue);
 }
 
 div.sede_logo_caes{
@@ -174,7 +178,7 @@ div.sede_logo_caes{
     flex-direction: column;
     justify-content:center;
     align-items: center;
-    background-color: #2E378E;
+    background: var(--primary_blue);
     padding-top: 1rem;
     transition: 0.4s;
     z-index: -1;
@@ -185,7 +189,7 @@ div.sede_logo_caes{
 .menu_container.is-active{
     min-height: 100vh;
     right:100%;
-    z-index: -1;
+    
 }
 
 .menu_container .mi_colegio{
